src/objects/Quote_Original_Charge__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Period__c</fullName>
        <label>Billing Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Number__c</fullName>
        <label>Charge Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Type__c</fullName>
        <label>Charge Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FC_Lookup_Key__c</fullName>
        <label>FC Lookup Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Total__c</fullName>
        <label>List Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan_Zuora_ID__c</fullName>
        <label>Product Rate Plan Zuora ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Quote Original Charges</relationshipLabel>
        <relationshipName>Quote_Original_Charges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Charge_Zuora_ID__c</fullName>
        <externalId>true</externalId>
        <label>Rate Plan Charge Zuora ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rate Plan Charge</label>
        <referenceTo>Zuora__SubscriptionProductCharge__c</referenceTo>
        <relationshipLabel>Quote Original Charges</relationshipLabel>
        <relationshipName>Quote_Original_Charges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Plan_Zuora_ID__c</fullName>
        <label>Rate Plan Zuora ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Quote Original Charge</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Quote Original Charge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Original Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>